<resources>
    <string name="app_name">AERVEAplay</string>
    <string name="logo">logo</string>
    <string name="copyright_2020">Copyright   ©   2020</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next">Next > </string>
    <string name="get_the_first_n_movie_amp_tv_information"><![CDATA[Get the first \n Movie & TV information.]]></string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="let_s_get_something">LET\'S GET SOMETHING.</string>
    <string name="good_to_see_you">Good to see you!</string>

    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget password?</string>
    <string name="sign_in">SIGN IN</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="email">Email</string>
    <string name="back">Back</string>
    <string name="todo">TODO</string>
    <string name="welcome">Millions of movies people to discover. \nExplore Now.</string>
    <string name="or_connect_using">Or connect using</string>
    <string name="log_in">lOG IN</string>
    <string name="create">Create</string>
    <string name="create_an_account_to_aervea_to_get_all_features">Create an account to Aervea to get all features</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="UserName">Please write your User Name.</string>
    <string name="PhoneNumber">Invalid your Phone Number.</string>
    <string name="InvalidPhoneNumber">Invalid your Phone Number</string>
    <string name="InvalidEmail">Invalid email address like ####@###.###</string>
    <string name="characters">You must have 8 characters in your password</string>
    <string name="confirm">the password not  Matches.</string>
    <string name="forget_password_">Forget Password</string>
    <string name="provide_your_account_s_email_for_which_you_want_to_reset_your_password">Provide your account\'s email for which you want to reset your password!</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="search_far_a_movie">Search far a Movie</string>
    <string name="fantastic">Fantastic \n   Movies</string>
    <string name="ahmed_ramadan">Ahmed Ramadan</string>
    <string name="comments">Comments</string>
    <string name="setting">Setting</string>
    <string name="ahmedtramadan4_gmail_com">ahmedtramadan4@gmail.com</string>
    <string name="address">Address</string>
    <string name="new_cairo_cairo_egypt">New Cairo, Cairo, Egypt.</string>
    <string name="logout">LogOut</string>
    <string name="logout_from_your_exiting_account">Logout from your exiting Account.</string>
    <string name="what_s_popular">What\'s Popular</string>

</resources>